Collada armature animation doesn't correctly import #29246

Closed
opened 2011-11-13 21:30:16 +01:00 by Mitchell Stokes · 7 comments

%%%The attached file imports correctly into 3DS Max (using OpenCOLLADA plugin) but doesn't import correctly into Blender. When playing the imported animation, the armature splits in two (top and bottom) and the top ends up shifted. About the only "odd" thing I know about this armature (I didn't make it, someone else on my team did) is that the pelvis bones are non-deforming (or so I've been told).%%%

%%%The attached file imports correctly into 3DS Max (using OpenCOLLADA plugin) but doesn't import correctly into Blender. When playing the imported animation, the armature splits in two (top and bottom) and the top ends up shifted. About the only "odd" thing I know about this armature (I didn't make it, someone else on my team did) is that the pelvis bones are non-deforming (or so I've been told).%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%If it helps at all, here is the process the rig went through:

The rig was made in Blender.
FBX export to MotionBuilder.
Animated in MotionBuilder and saved back out to FBX.
FBX import into 3DS Max.
OpenCOLLADA export from 3DS Max.

If needed I could probably provide the original blend or the intermediate fbx file.%%%

%%%If it helps at all, here is the process the rig went through: The rig was made in Blender. FBX export to MotionBuilder. Animated in MotionBuilder and saved back out to FBX. FBX import into 3DS Max. OpenCOLLADA export from 3DS Max. If needed I could probably provide the original blend or the intermediate fbx file.%%%

%%%Closed duplicate:
http://projects.blender.org/tracker/index.php?func=detail&aid=29282&group_id=9&atid=498

From the report:
"It appears the exporter is configured to expect the tranformation listed with each node under <library_visual_scenes>
to be applied to whatever animation is supplied to the node in <library_animations>.

However, this is a bug since the 1.4 spec states on page 55 that channels are used to direct and thus replace the
transformation on the node itself. In other words the existing transformation on the node in section <library_visual_scenes>
should look like the transformation of the first frame given in section <library_animations>."
%%%

%%%Closed duplicate: http://projects.blender.org/tracker/index.php?func=detail&aid=29282&group_id=9&atid=498 From the report: "It appears the exporter is configured to expect the tranformation listed with each node under <library_visual_scenes> to be applied to whatever animation is supplied to the node in <library_animations>. However, this is a bug since the 1.4 spec states on page 55 that channels are used to direct and thus replace the transformation on the node itself. In other words the existing transformation on the node in section <library_visual_scenes> should look like the transformation of the first frame given in section <library_animations>." %%%

%%%Let me try to clarify the issue a bit further. The problem seems to be a difference in how Blender and Collada work. In Blender, armature animation in pose mode is always added on top of the rest pose of the bone itself, while in collada this is not the case, (I think) it is specified relative to rest pose of the parent bone.

The importer should correct for this somehow, maybe converting the animation to a matrix in the right space, and then decomposing it into scale/rotation/translate again. Currently it seems to just copy the curves as is.%%%

%%%Let me try to clarify the issue a bit further. The problem seems to be a difference in how Blender and Collada work. In Blender, armature animation in pose mode is always added on top of the rest pose of the bone itself, while in collada this is not the case, (I think) it is specified relative to rest pose of the parent bone. The importer should correct for this somehow, maybe converting the animation to a matrix in the right space, and then decomposing it into scale/rotation/translate again. Currently it seems to just copy the curves as is.%%%

%%%Collada bugs are not being handled well so far,

for this reason they are all being set as 'TODO' and linked from our wiki page.

http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada

This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Collada bugs are not being handled well so far, for this reason they are all being set as \'TODO\' and linked from our wiki page. http://wiki.blender.org/index.php/Dev:2.5/Source/Development/Todo/Import_Export#OpenCollada This tracker item can still be updated with useful info and closed (removed from the page above) when fixed.%%%

%%%Fixed in svn by Juha Mäki-Kanto. Thanks for the report!%%%

%%%Fixed in svn by Juha Mäki-Kanto. Thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29246
No description provided.